# wow-auction

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  template.env
cache/: item.db
grafana/config/: grafana.ini
grafana/dashboards/: HAXFY3hVz.json
scripts/: backup_dashboards.py
src/wowauction/: __main__.py  auction.py  blizzard.py  cache.py  http_client.py  item.py  vmagent.py  wowhead.py
