[tool.poetry]
name = "wow-auction"
version = "0.1.0"
description = ""
authors = ["Tim Martin <tim@timmart.in>"]
readme = "README.md"
packages = [
    {include = "wowauction", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.23.1"
attrs = "^22.2.0"
anyio = "^3.6.2"
arrow = "^1.2.3"
yarl = "^1.8.2"
click = "^8.1.3"
beautifulsoup4 = "^4.11.1"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
mypy = "^0.991"
ruff = "^0.0.204"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "I"]
target-version = "py311"
